tests/invalid/non_const_array_size.lang
module main

func main() {
    var size: i32 = 1;
    var array: [size]i32;
}
